--- a/gui/informationscreens/AlignmentsScreen.kv
+++ b/gui/informationscreens/AlignmentsScreen.kv
@@ -48,7 +48,7 @@
                 MDLabel:
                     text_color: C("FFFFFF")
                     font_style: "Body2"
-                    text: f"[color=#c62828][size=22sp][font=Icons]{md_icons['shield-bug']}[/font][/size][/color]: Hacker"
+                    text: f"[color={app.globals.colordefs['Red']}][size=22sp][font=Icons]{md_icons['shield-bug']}[/font][/size][/color]: Hacker"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -56,7 +56,7 @@
                 MDLabel:
                     text_color: C("FFFFFF")
                     font_style: "Body2"
-                    text: f"[color=#1565c0][size=22sp][font=Icons]{md_icons['shield-lock']}[/font][/size][/color]: Coder"
+                    text: f"[color={app.globals.colordefs['Blue']}][size=22sp][font=Icons]{md_icons['shield-lock']}[/font][/size][/color]: Coder"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
