--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -49,7 +49,7 @@
                         maininfoscreenmanager.current = "Lore"
 
                 MDNavigationDrawerItem:
-                    icon: "chevron-right-circle"
+                    icon: "chevron-right"
                     text: "Navigation"
                     focus_color: app.theme_cls.primary_dark
                     unfocus_color: app.theme_cls.primary_color
