--- a/gui/informationscreens/LogsScreen.kv
+++ b/gui/informationscreens/LogsScreen.kv
@@ -34,7 +34,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: "In the beginning of each round, one or more logs are provided to the entire group. Depending on the round, will depend on how many and what type of log is provided. Logs will never provide definite information. Players consistently found on logs do not necessarily prove guilt. However, a hacker will always be on every log."
+                    text: "In the beginning of each round, one or more logs are provided to the entire group. Depending on the round, will depend on how many and what type of log is provided. Not all logs provide definite information. Players consistently found on logs do not necessarily prove guilt."
 
                 MDSeparator:
                     color: C("FFFFFF")
@@ -50,7 +50,15 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"[size=22sp][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Unrevealed Evidence[/color]"
+                    text: f"[size=22sp][font=Icons]{md_icons['file']}[/font][/size][color=#FFFFFF]: Digital Footprint[/color]"
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"[size=22sp][font=Icons]{md_icons['file-account']}[/font][/size][color=#FFFFFF]: Revealed Digital Footprint[/color]"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -58,7 +66,7 @@
                 MDLabel:
                     text_color: C('FFFFFF')
                     font_style: "Body2"
-                    text: f"[color=#1565c0][size=22sp][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
+                    text: f"[size=22sp][color=#c62828][font=Icons]{md_icons['folder-alert']}[/font][/color][/size]: Corrupted Log"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -66,15 +74,7 @@
                 MDLabel:
                     text_color: C('FFFFFF')
                     font_style: "Body2"
-                    text: f"[size=22sp][font=Icons]{md_icons['folder-account']}[/font][/size]: Revealed Evidence"
-                    theme_text_color: "Custom"
-                    adaptive_height: True
-                    markup: True
-
-                MDLabel:
-                    text_color: C('FFFFFF')
-                    font_style: "Body2"
-                    text: f"[size=22sp][color=#c62828][font=Icons]{md_icons['folder-alert']}[/font][/color][/size]: Corrupted Evidence"
+                    text: f"[size=22sp][color={app.globals.colordefs['Red']}][font=Icons]{md_icons['file-alert']}[/font][/color][/size]: Corrupted Digital Footprint"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -94,7 +94,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Each [size=22sp][color=#FFFFFF][font=Icons]{md_icons['folder']}[/font][/color][/size] is evidence of a player that is on the log. Once a log is uploaded by pressing the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['cloud-upload']}[/font][/size][/color], the evidence will become [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-account']}[/font][/size][/color] and the color of the evidence will signify who it belongs to. There is a probability where logs may be exactly the same. This is an intended and should be taken into consideration."
+                    text: f"Each [size=22sp][color=#FFFFFF][font=Icons]{md_icons['file']}[/font][/color][/size] is a player that is on the log. Once a log is revealed, the evidence will become [color=#FFFFFF][size=22sp][font=Icons]{md_icons['file-account']}[/font][/size][/color] and the color of the evidence will signify who it belongs to. It is possible for logs to be exactly the same. This is an intended and should be taken into consideration."
                     markup: True
 
                 MDSeparator:
@@ -112,7 +112,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"There is a seventy percent chance of a log failing when it is being revealed. This percentage may have been tampered with by other players. When a log becomes corrupted, all unrevealed evidence becomes [size=22sp][color=#FFFFFF][font=Icons]{md_icons['folder-alert']}[/font][/color][/size] and no further information is provided. Only player logs cannot be corrupted. Corrupted logs may be recovered by actions."
+                    text: f"Only during the second round, may a log become corrupted. There is a [color=#FFFFFF]eighty five[/color] percent chance of a log failing when it is revealed. Hackers may also corrupt a log via an action. When a log becomes [size=22sp][color=#FFFFFF][font=Icons]{md_icons['folder-alert']}[/font][/color][/size], all digital footprints within the log become [size=22sp][color=#FFFFFF][font=Icons]{md_icons['file-alert']}[/font][/color][/size] and no further information is provided."
                     markup: True
 
                 MDSeparator:
@@ -130,5 +130,5 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Player logs are found on the 3rd round and are identified by two [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-key']}[/font][/size][/color]. A player log can be opened by the pressing the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['cloud']}[/font][/size][/color]. Once opened, it will reveal who the log belongs to. Only the owner of the log can upload and view its revealed contents. The player who owns the log will never be within their own log. One player cannot have multiple player logs nor can an AI get a player log."
+                    text: f"Player logs are found on the third round. During the player log phase, [color=#FFFFFF]two[/color] players at random are selected to obtain and reveal an exclusive log. Only the owner of the log can upload and view its revealed contents. The player who owns the log will never be within their own log. Players cannot receive multiple player logs nor can an AI get a player log."
                     markup: True
