--- a/dialogs/rematchdialog.kv
+++ b/dialogs/rematchdialog.kv
@@ -42,6 +42,7 @@
                 text_color: C("FFFFFF")
                 text: "New Game"
                 on_release:
+                    self.disabled = True
                     app.root.transition.direction = "down"
                     app.root.current = "player"
                     app.root.get_screen('endgame').refresh()
@@ -56,9 +57,9 @@
                 text_color: C("FFFFFF")
                 text: "Rematch"
                 on_release:
+                    self.disabled = True
                     app.root.get_screen('endgame').refresh()
                     root.rematch()
-                    app.root.get_screen('reveal').rematchreset()
                     app.root.transition.direction = "down"
                     app.root.current = "reveal"
                     root.dismiss()
