--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -120,5 +120,6 @@
             text_color: C("FFFFFF")
             text: "End Turn"
             on_release:
+                self.disabled = True
                 app.root.get_screen('main').ids.mainscreenmanager.get_screen('playerlogscreen').trackplayer()
                 root.dismiss()
