Loads of fixes.

--- a/codenet.kv
+++ b/codenet.kv
@@ -161,7 +161,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -237,7 +237,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -302,7 +302,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -367,7 +367,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -445,7 +445,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -497,7 +497,7 @@ WindowManager:
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
-                                    radius: [5]
+                                    radius: [dp(5)]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
