--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -118,6 +118,7 @@
             pos_hint: {"center_x": 0.5, "center_y": 0.5}
             line_color: C("FFFFFF")
             text_color: C("FFFFFF")
+            line_width: '1.01dp'
             text: "End Turn"
             on_release:
                 self.disabled = True
