--- a/gui/informationscreens/AlignmentsScreen.kv
+++ b/gui/informationscreens/AlignmentsScreen.kv
@@ -318,7 +318,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Hackers always have an ally and are fully aware of who their ally is. Only when there are nine players will hackers have a second ally. Hacker's objective is to have as many coders as possible to trust them, while making coders distrust each other. They will also try and get coders to determine the [color=#FFFFFF][font=Icons][size=22]{md_icons['target-account']}[/size][/font][/color] as a hacker for additional points. Denial and deception is key to victory."
+                    text: f"Hackers always have an ally and are fully aware of who their ally is. Only when there are nine players will hackers have a second ally. Hacker's objective is to have as many coders as possible to trust them, while making coders distrust each other. They will also try and get coders to determine the [color=#FFFFFF][font=Icons][size=22sp]{md_icons['target-account']}[/size][/font][/color] as a hacker for additional points. Denial and deception is key to victory."
                     markup: True
 
                 MDSeparator:
@@ -336,5 +336,5 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"Coders must work together to figure out who the hackers are with the assistance of actions and logs. Coders get additional points by figuring out who among them is the [color=#FFFFFF][font=Icons][size=22]{md_icons['target-account']}[/size][/font][/color] and then determining them as a coder. The tools provided may not be always reliable, so use discretion. Coders must be aware of deception and use process of elimination to make informed decisions."
+                    text: f"Coders must work together to figure out who the hackers are with the assistance of actions and logs. Coders get additional points by figuring out who among them is the [color=#FFFFFF][font=Icons][size=22sp]{md_icons['target-account']}[/size][/font][/color] and then determining them as a coder. The tools provided may not be always reliable, so use discretion. Coders must be aware of deception and use process of elimination to make informed decisions."
                     markup: True
