--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -36,7 +36,8 @@
                 markup: True
 
             MDGridLayout:
-                size_hint_y: 0.01
+                size_hint_y: None
+                height: '28dp'
                 id: setgrid
                 cols: 9
                 canvas.before:
