--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -1,6 +1,6 @@
 <IdentityDialog>:
     auto_dismiss: False
-    size_hint: 0.9, 0.5
+    size_hint: 0.9, 0.6
 
     MDCard:
         id: identitycard
@@ -87,6 +87,7 @@
             line_color: C("FFFFFF")
             text_color: C("FFFFFF")
             text: "End Turn"
+            line_width: '1.01dp'
             on_release:
                 self.disabled = True
                 app.root.get_screen('reveal').trackplayer()
