Many changes meant for mobile support.

--- a/codenet.kv
+++ b/codenet.kv
@@ -170,7 +170,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -185,7 +185,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 adaptive_height: True
@@ -246,7 +246,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -261,7 +261,7 @@ WindowManager:
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 adaptive_height: True
@@ -311,7 +311,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -326,7 +326,7 @@ WindowManager:
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 adaptive_height: True
@@ -376,7 +376,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -391,7 +391,7 @@ WindowManager:
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
                                 halign: "center"
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 adaptive_height: True
@@ -454,7 +454,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -469,7 +469,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
@@ -506,7 +506,7 @@ WindowManager:
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.3
                                 Line:
-                                    width: 1.3
+                                    width: dp(1.2)
                                     rectangle: self.x, self.y, self.width, self.height
                                 Color:
                                     rgba: 51/255, 255/255, 51/255, 0.06
@@ -521,7 +521,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+                                text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
