--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -1,6 +1,6 @@
 <ActionDialog>:
     auto_dismiss: False
-    size_hint: 0.9, 0.6
+    size_hint: 0.9, 0.8
 
     MDCard:
         id: actioncard
@@ -30,7 +30,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.4
@@ -114,7 +114,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.4
@@ -140,7 +140,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.4
