--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -30,7 +30,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.5
@@ -76,7 +76,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.5
