--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -31,7 +31,7 @@
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
                 Line:
-                    width: 0.3
+                    width: dp(0.3)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.4
