--- a/gui/mainscreens/Action.kv
+++ b/gui/mainscreens/Action.kv
@@ -25,7 +25,7 @@
                 Color:
                     rgba: 51/255, 255/255, 51/255, 0.3
                 Line:
-                    width: 1.3
+                    width: dp(1.2)
                     rectangle: self.x, self.y, self.width, self.height
                 Color:
                     rgba: 51/255, 255/255, 51/255, 0.06
